# git-stack

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
docs/diagnostics/: sync-merged-parent-lkg.md
openwiki/: .last-update.json  index.md  quickstart.md  source-map.md
openwiki/architecture/: index.md  overview.md
openwiki/domain/: index.md  stack-state.md
openwiki/integrations/: github-and-storage.md  index.md
openwiki/operations/: index.md  testing-and-runbook.md
openwiki/workflows/: index.md  restack-and-recovery.md  sync-and-status.md
scripts/: benchmark.sh
skills/git-stack/: SKILL.md
src/: git.rs  git2_ops.rs  github.rs  llms.md  llms.rs  lock.rs  main.rs  merge_base_cache.rs  pr_cache.rs  state.rs  stats.rs  sync.rs
src/render/: cli.rs  colors.rs  mod.rs  tree_data.rs
src/tui/: app.rs  input.rs  mod.rs
tests/: restack_abort.rs  worktree_checkout.rs
