[package]
name = "git-stack"
version = "0.1.2"
edition = "2024"
license = "GPL2"
keywords = ["git", "stack", "github"]
categories = ["development-tools"]
description = "A git stacking CLI for basic stacked diff management."
readme = "README.md"
homepage = "https://github.com/wbbradley/git-stack"
repository = "https://github.com/wbbradley/git-stack"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.0.0"
crossterm = "0.29.0"
git2 = "0.20"
indicatif = "0.18.3"
md5 = "0.8"
rand = "0.10"
ratatui = "0.30"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = { version = "3.1", features = ["json"] }
xdg = "3.0.0"

[profile.release]
debug = true
